Ajout image WPF

--- a/DotNET/Code/FormationDotNET/CoursWPF/MainWindow.xaml
+++ b/DotNET/Code/FormationDotNET/CoursWPF/MainWindow.xaml
@@ -72,6 +72,7 @@
                     </StackPanel>
                 </GroupBox>
             </StackPanel>
+            <Button Content="Button"/>
         </StackPanel>
         
     </Grid>
