--- a/DotNET/Code/FormationDotNET/CoursWPF/App.xaml
+++ b/DotNET/Code/FormationDotNET/CoursWPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CoursWPF"
-             StartupUri="UniformGrid.xaml">
+             StartupUri="ImageWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
