--- a/DotNET/Code/FormationDotNET/TpNombreMystereWPF/MainWindow.xaml
+++ b/DotNET/Code/FormationDotNET/TpNombreMystereWPF/MainWindow.xaml
@@ -5,19 +5,67 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TpNombreMystereWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Le nombre mystère" Height="440" Width="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid Background="Orange">
         <StackPanel Orientation="Vertical">
             <TextBlock TextWrapping="Wrap" Text="Le Nombre Mystère" Foreground="White" HorizontalAlignment="Center" FontSize="35px" FontWeight="Bold" Margin="0,10,0,0"/>
             <TextBlock TextWrapping="Wrap" Text="J'ai généré automatiquement un Chiffre / Nombre entre 1 et 50" HorizontalAlignment="Center" FontSize="20px" Foreground="White" Margin="0,20,0,20"/>
-            <TextBlock x:Name="TextBoxResult1" TextWrapping="Wrap" Text="" FontSize="25px" HorizontalAlignment="Center" Margin="0,0,0,20"/>
-            <TextBlock x:Name="TextBoxResult2" TextWrapping="Wrap" Text="" FontSize="25px" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+            <TextBlock x:Name="TextBoxResult1" Text="" FontSize="25px" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+            <TextBlock x:Name="TextBoxResult2" Text="" FontSize="25px" HorizontalAlignment="Center" Margin="0,0,0,20"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock x:Name="TBNbEssais" Text="" Foreground="White" FontSize="15px" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                <TextBox x:Name="TBoxNbUser" FontSize="35px" HorizontalAlignment="Center" Width="90" Height="40" Margin="30,0,30,0"/>
-                <Button x:Name="BtnValider" Content="Valider" HorizontalAlignment="Center" Background="#FF404040" Foreground="White" FontSize="30px" FontFamily="Tw Cen MT Condensed" Click="Valider_Click"/>
+                <TextBlock x:Name="TBNbEssais" Text="" VerticalAlignment="Center" Foreground="White" FontSize="20px"/>
+                <TextBox x:Name="TBoxNbUser" FontSize="35px" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="90" Height="50" Margin="20,0,30,0" KeyDown="TextBoxNbUser_KeyDown"/>
+                <Button x:Name="BtnValider" Width="100" Content="Valider" FontSize="30px" FontFamily="Tw Cen MT Condensed" Click="Valider_Click">
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Content" Value="OK"/>
+                            <Setter Property="Height" Value="50"/>
+                            <Setter Property="Background" Value="#FF404040"/>
+                            <Setter Property="Foreground" Value="#FFFFFF"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border Background="{TemplateBinding Background}">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="Red"/>
+                                    <Setter Property="Foreground" Value="Black"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
             </StackPanel>
-            <Button x:Name="BtnNewGame" Content="Nouvelle Partie" Background="#FF404040" Foreground="White" FontSize="30px" FontFamily="Tw Cen MT Condensed" Margin="30,30,30,0" Click="NewGame_Click"/>
+            <Button x:Name="BtnNewGame" Content="Nouvelle Partie" FontSize="30px" FontFamily="Tw Cen MT Condensed" Margin="30,30,30,0" Click="NewGame_Click">
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Content" Value="OK"/>
+                        <Setter Property="Height" Value="50"/>
+                        <Setter Property="Background" Value="#FF404040"/>
+                        <Setter Property="Foreground" Value="#FFFFFF"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Red"/>
+                                <Setter Property="Foreground" Value="Black"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
