Ajout Correction Banque ASP.NET Core

--- a/DotNET/Code/FormationDotNET/TpAspNETCore/TpListPersonneAspNETCore/Views/Person/AddPersonView.cshtml
+++ b/DotNET/Code/FormationDotNET/TpAspNETCore/TpListPersonneAspNETCore/Views/Person/AddPersonView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Person
 
-<form class="container" asp-controller="Home" asp-action="SubmitCreate">
+<form class="container" asp-controller="Person" asp-action="SubmitCreate">
     @if (ViewBag.messageError != null)
     {
         <div class="row m-1 justify-content-center align-items-center">
